--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,62 @@
-body{
+body, html {
     font-size: 20px;
     font-family: sans-serif;
     color: #333;
+    height: 100%;
 
+}
+
+p {
+    text-align: center;
+    font-weight: bold;
+}
+
+.container {
+    background-image: url("../images/BlueAbstract.jpeg");
+    height: 100%;
+}
+
+.container2 {
+    background-image: url("../images/BlueAbstract.jpeg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 30%;
 }
 
 .question {
     font-weight: 600;
+    text-align: center;
 }
 
 .answers {
     margin-bottom: 20px;
+    text-align: center;
 }
 
+.quiz-container {
+    background-image: url("../images/BlueAbstract.jpeg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -1;
+    opacity: 30%;
+}
+#title {
+    font-size: 25px;
+    font-style: oblique;
+    color: black;
+    text-align: center;
+    padding: 20px;
+    background-color: skyblue
+
+}
 #submit {
     font-family: sans-serif;
     font-size: 20px;
+    text-align: center;
     background-color: #297;
     color: #fff;
     border: 0px;
@@ -28,6 +69,24 @@ body{
 
 #submit:hover {
     background-color: #3a8;
+}
+
+#resetgame {
+    font-family: sans-serif;
+    font-size: 20px;
+    text-align: center;
+    background-color: cornflowerblue;
+    color: #fff;
+    border: 0px;
+    border-radius: 3px;
+    padding: 20px;
+    cursor: pointer;
+    margin-bottom: 20px;
+
+}
+
+#resetgame:hover {
+    background-color: cadetblue;
 }
 
 
